# shopify-insights-fetcher

./: .env  .replit  ARCHITECTURE_DOCUMENTATION.md  DEPENDENCIES.md  README.md  SETUP_GUIDE.md  Shopify_Insights_Fetcher.postman_collection.json  TESTING_GUIDE.md  edge_case_test_report.json  main.py  memy_test.json  models.py  pyproject.toml  replit.md  test_edge_cases.py  test_output.json  verify_functionalities.md
.specstory/history/: 2025-07-18_11-56Z-generate-a-name-for-the-chat.md
services/: ai_validator.py  base.py  competitor_analyzer.py  content_scraper.py  currency_service.py  database_service.py  extractors.py  factory.py  health_checker.py  intelligent_content_extractor.py  interfaces.py  orchestrator.py  product_scraper.py  scraper.py  social_scraper.py
static/: index.html  script.js  style.css
utils/: helpers.py
