[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.116.1",
    "google-genai>=1.26.0",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "trafilatura>=2.0.0",
    "uvicorn>=0.35.0",
]
